# serializer version: 1
# name: test_modbus_register_descriptions_match_spec[0]
  dict({
    'base': 0,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': None,
        'key': '001',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_002_icon(state: StateType) -> str',
        'key': '002',
        'name': <UndefinedType._singleton: 0>,
        'options': list([
          'standby',
          'heating',
          'cooling',
          'water',
          'auto',
        ]),
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:water-boiler',
        'icon_provider': None,
        'key': '003',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[100]
  dict({
    'base': 100,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:information-outline',
        'icon_provider': None,
        'key': 'controller_v',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': None,
        'options': None,
        'state_class': None,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENUM: 'enum'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_mode_icon(state: StateType | datetime.date | datetime.datetime | decimal.Decimal) -> str',
        'key': 'mode',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': None,
        'options': list([
          'standby',
          'heating',
          'cooling',
          'water',
          'auto',
        ]),
        'state_class': None,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_error_icon(state: bool | None) -> str',
        'key': 'error',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': None,
        'key': '14a',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENUM: 'enum'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_sgready_icon(state: StateType | datetime.date | datetime.datetime | decimal.Decimal) -> str',
        'key': 'sg',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': None,
        'options': list([
          'off',
          'normal',
          'block',
          'raise',
          'start',
        ]),
        'state_class': None,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_electric_switch_icon(state: bool | None) -> str',
        'key': 'evu',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[10]
  dict({
    'base': 10,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heating-coil',
        'icon_provider': None,
        'key': '310',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '311',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 25,
        'native_min_value': -20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '312',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 25,
        'native_min_value': -9,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '315',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '316',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '320',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[110]
  dict({
    'base': 110,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:home-thermometer-outline',
        'icon_provider': None,
        'key': 'h_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:home-thermometer-outline',
        'icon_provider': None,
        'key': 'h1_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:home-thermometer-outline',
        'icon_provider': None,
        'key': 'h2_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake-thermometer',
        'icon_provider': None,
        'key': 'c_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake-thermometer',
        'icon_provider': None,
        'key': 'c1_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake-thermometer',
        'icon_provider': None,
        'key': 'c2_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-water',
        'icon_provider': None,
        'key': 'hw_target',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[120]
  dict({
    'base': 120,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': 'tk',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': 'tk1',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': 'tk2',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-water',
        'icon_provider': None,
        'key': 'tw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': 'tr',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-chevron-down',
        'icon_provider': None,
        'key': 'trl',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-chevron-up',
        'icon_provider': None,
        'key': 'tvl',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[130]
  dict({
    'base': 130,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.VOLUME_FLOW_RATE: 'volume_flow_rate'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:waves-arrow-right',
        'icon_provider': None,
        'key': 'v',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_MINUTE: 'L/min'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_pump_on_off_icon(state: bool | None) -> str',
        'key': 'pk',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:pump',
        'icon_provider': None,
        'key': 'pkl',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': '%',
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_pump_on_off_icon(state: bool | None) -> str',
        'key': 'pk1',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_pump_on_off_icon(state: bool | None) -> str',
        'key': 'pk2',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_pump_on_off_icon(state: bool | None) -> str',
        'key': 'pww',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:sine-wave',
        'icon_provider': None,
        'key': 'vf',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfFrequency.HERTZ: 'Hz'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': 0,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:fan',
        'icon_provider': None,
        'key': 'ld1',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': 'rpm',
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': 0,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:fan',
        'icon_provider': None,
        'key': 'ld2',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': 'rpm',
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': 0,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[140]
  dict({
    'base': 140,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': 'ta',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-auto',
        'icon_provider': None,
        'key': 'ta1',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-auto',
        'icon_provider': None,
        'key': 'ta4',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-auto',
        'icon_provider': None,
        'key': 'ta8',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-auto',
        'icon_provider': None,
        'key': 'ta24',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[170]
  dict({
    'base': 170,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'out_hp',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'in_hp',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:poll',
        'icon_provider': None,
        'key': 'efficiency_hp',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': None,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:poll',
        'icon_provider': None,
        'key': 'efficiency_total',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': None,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'out_backup',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'in_backup',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'out_total',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.POWER: 'power'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '*10',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'in_total',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfPower.WATT: 'W'>,
        'options': None,
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[180]
  dict({
    'base': 180,
    'descriptors': list([
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_hp_out_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_hp_in_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_hp_out_c',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_hp_in_c',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_hp_out_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_hp_in_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_backup3_out_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_backup3_in_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_backup3_out_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_backup3_in_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_backup6_out_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_backup6_in_h',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heat-wave',
        'icon_provider': None,
        'key': 'day_backup6_out_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <SensorDeviceClass.ENERGY: 'energy'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': '/100',
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:lightning-bolt',
        'icon_provider': None,
        'key': 'day_backup6_in_hw',
        'last_reset': None,
        'name': <UndefinedType._singleton: 0>,
        'native_unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
        'options': None,
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'suggested_display_precision': None,
        'suggested_unit_of_measurement': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[20]
  dict({
    'base': 20,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake',
        'icon_provider': None,
        'key': '350',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '351',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 32,
        'native_min_value': 16,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '352',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 45,
        'native_min_value': 29,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '355',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '356',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '360',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[30]
  dict({
    'base': 30,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:heating-coil',
        'icon_provider': None,
        'key': '410',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '411',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 25,
        'native_min_value': -20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '412',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 25,
        'native_min_value': -9,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '415',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '416',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '420',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 20,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[40]
  dict({
    'base': 40,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake',
        'icon_provider': None,
        'key': '450',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '451',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 32,
        'native_min_value': 16,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '452',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 45,
        'native_min_value': 29,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '455',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '456',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer',
        'icon_provider': None,
        'key': '460',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 7,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[50]
  dict({
    'base': 50,
    'descriptors': list([
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-water',
        'icon_provider': None,
        'key': '501',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 75,
        'native_min_value': 25,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-water',
        'icon_provider': None,
        'key': '522',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 55,
        'native_min_value': 30,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
# name: test_modbus_register_descriptions_match_spec[60]
  dict({
    'base': 60,
    'descriptors': list([
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': '_808_icon(state: StateType) -> str',
        'key': '808',
        'name': <UndefinedType._singleton: 0>,
        'options': list([
          'off',
          'normal',
          'block',
          'raise',
        ]),
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:home-thermometer-outline',
        'icon_provider': None,
        'key': '811',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 0,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:thermometer-water',
        'icon_provider': None,
        'key': '812',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 0,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'factor': None,
        'force_update': False,
        'has_entity_name': False,
        'icon': 'mdi:snowflake-thermometer',
        'icon_provider': None,
        'key': '813',
        'max_value': None,
        'min_value': None,
        'mode': <NumberMode.BOX: 'box'>,
        'name': <UndefinedType._singleton: 0>,
        'native_max_value': 30,
        'native_min_value': 0,
        'native_step': 1,
        'native_unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
        'step': None,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
      dict({
        'device_class': None,
        'entity_category': None,
        'entity_registry_enabled_default': True,
        'entity_registry_visible_default': True,
        'force_update': False,
        'has_entity_name': False,
        'icon': None,
        'icon_provider': None,
        'key': '815',
        'name': <UndefinedType._singleton: 0>,
        'translation_key': None,
        'translation_placeholders': None,
        'unit_of_measurement': None,
      }),
    ]),
  })
# ---
